Sass to solve too wide impact number

--- a/app/assets/stylesheets/lpa.scss
+++ b/app/assets/stylesheets/lpa.scss
@@ -23,7 +23,7 @@
 .completion-rate {
   .impact-number {
     float:left;
-
+    width: 12.3em;
     strong {
       @include bold-48($tabular-numbers: true);
 
